Version 1.1.9 - 12 June 2007

  * Handle headers in Multipart GetObject responses case insensitively
  * Added option to ignore malformed headers on a multi-part GetObject
  * Fix bug where exception was thrown when URL was of the form:
    http://example.com:6103
  * Added missing METADATA-OBJECT to RetsSession::MetadataTypeToString
  * Added optional timestamp to StreamHttpLogger

Version 1.1.8 - 26 March 2007

  * librets-config has additional information of version number as hex
    and if the sql compiler was included.
  * Added support for MetadataObject to RetsMetadata
  * Added methods of GetMIMEType, GetVisibleName, and GetDescription
    to MetadataObject
  * For the languages supported by swig: map MetadataObject

Version 1.1.7 - 13 February 2007

  * The SQL to DMQL compiler (and its ANTLR dependency) are now
    optional.  This should only effect people using C++ and this
    functionality.
  * Fix some build problems on OS X/Unix where ANTLR wasn't where we
    were expecting it.
  * For the languages supported by swig: map the missing
    SearchRequest.SetQueryType and SearchRequest.SetFormatType methods.

Version 1.1.6 - 18 December 2006

  * Create the rest of the method mappings for MetadataTable for various
    swig bindings.

Version 1.1.5 - 20 November 2006

  * Properly quote strings with spaces in SQL to DMQL translator.

Version 1.1.4 - 23 August 2006

  * URL escape more characters.
  * More robust Logout Respoonse handling.
  * Make Ruby bindings more Ruby-like
  * Remove all derived files from source distribution, except ./configure

Version 1.1.3 - 26 July 2006

  * Expose LoginResponse and CapabilityUrls in RetsSession.

Version 1.1.2 - 12 July 2006

  * Add Interealty client (user agent) authorization.

Version 1.1.1 - 11 May 2006

  * Deal with HTTP headers as case insensitive.
  * Handle GetObject SQL queries that have no WHERE clause.

Version 1.1.0 -  2 May 2006

  * Fix parse error for COMPACT data rows with all empty data.